Se quita el tiempo para tareas no cronometradas. Fix para que sea Java 8.